[package]
name = "ndarray-histogram"
version = "0.2.0"
rust-version = "1.70.0"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qu1x/ndarray-histogram"
documentation = "https://docs.rs/ndarray-histogram"
readme = "README.md"
description = "Histogram support for n-dimensional arrays."
keywords = ["array", "multidimensional", "statistics", "matrix", "ndarray"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = "0.15.6"
ndarray-slice = "0.2.3"
ordered-float = "4.2.0"
num-integer = "0.1.45"
num-traits = "0.2.17"
rand = "0.8.5"
itertools = { version = "0.12.0", default-features = false }
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"

[features]
rayon = ["dep:rayon", "ndarray-slice/rayon", "ndarray/rayon"]

[[bench]]
name = "sort"
harness = false

[profile.test]
opt-level = 2
