[package]
name = "ndarray-histogram"
version = "0.4.0"
rust-version = "1.74.0"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qu1x/ndarray-histogram"
documentation = "https://docs.rs/ndarray-histogram"
readme = "README.md"
description = "Histogram support for n-dimensional arrays."
keywords = ["array", "multidimensional", "statistics", "matrix", "ndarray"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = "0.16.1"
ndarray-slice = { version = "0.4.0", default-features = false, features = ["std"] }
ordered-float = "4.2.2"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8.5"
itertools = { version = "0.13.0", default-features = false }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"

[features]
default = ["ndarray-slice/stacker"]
rayon = ["dep:rayon", "ndarray-slice/rayon", "ndarray/rayon"]

[[bench]]
name = "sort"
harness = false

[profile.test]
opt-level = 2
