[package]
name = "ndarray-histogram"
version = "0.5.0"
rust-version = "1.85.0"
edition = "2024"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qu1x/ndarray-histogram"
documentation = "https://docs.rs/ndarray-histogram"
readme = "README.md"
description = "Histogram support for n-dimensional arrays."
keywords = ["array", "multidimensional", "statistics", "matrix", "ndarray"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = "0.16.1"
ndarray-slice = { version = "0.5.1", default-features = false, features = ["std"] }
ordered-float = "5.0.0"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.9.0"
itertools = { version = "0.14.0", default-features = false }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"

[features]
default = ["ndarray-slice/stacker"]
rayon = ["dep:rayon", "ndarray-slice/rayon", "ndarray/rayon"]

[[bench]]
name = "sort"
harness = false

[profile.test]
opt-level = 2
